--- a/config/locales/spa/pack.accountancy.yml
+++ b/config/locales/spa/pack.accountancy.yml
@@ -23,7 +23,7 @@ spa:
         #>clients: 'Clients'
         #>suppliers: 'Fournisseurs'
         #>title: 'Catégories de tiers'
-      #>month_period: '{{code}} - {{month}} {{year}}'
+      #>month_period: '%{code} - %{month} %{year}'
   views:
     accountancy:
       account:
@@ -34,15 +34,15 @@ spa:
         #>account_letter: 'Lettrer le compte'
         #>account_update: 'Modifier le compte'
         #>balance: 'Solde'
-        #>title: 'Compte : {{number}} - {{name}}'
+        #>title: 'Compte : %{number} - %{name}'
         #>totals: 'Totaux (pièces validées et brouillard)'
       account_create:
         #>title: 'Créer un nouveau compte'
       account_letter:
-        #>current_letter: 'Lettre en cours : {{letter}}'
-        #>title: 'Lettrage du compte N°{{number}} du {{started_on}} au {{stopped_on}}'
+        #>current_letter: 'Lettre en cours : %{letter}'
+        #>title: 'Lettrage du compte N°%{number} du %{started_on} au %{stopped_on}'
       account_update:
-        #>title: 'Modifier le compte : {{number}} - {{name}}'
+        #>title: 'Modifier le compte : %{number} - %{name}'
       accountize:
         #>counts_by_nature: 'Nombre de pièces à comptabiliser par type'
         nb_invoices:
@@ -66,13 +66,13 @@ spa:
         #>accounts: 'Comptes comptables utilisés'
         #>balance: 'Solde'
         #>centralize: 'Comptes comptables centralisateurs'
-        #>centralized_account: 'Compte centralisateur {{name}}'
+        #>centralized_account: 'Compte centralisateur %{name}'
         #>closed: 'Verrouillées'
         #>confirmed: 'Confirmées'
         #>down_to_level: 'Détailler jusqu''au niveau'
         #>draft: 'Brouillard'
         #>journal_entries_states: 'États des écritures utilisées'
-        #>subtotal: 'Sous-total {{name}}'
+        #>subtotal: 'Sous-total %{name}'
         #>subtotals_at_level: 'Sous-totaux aux niveaux'
         #>title: 'Balance'
         #>total: 'Total'
@@ -84,18 +84,18 @@ spa:
         #>bank_statement_point: 'Pointer le relevé'
         #>bank_statement_update: 'Modifier le relevé'
         #>journal_entries: 'Écritures'
-        #>title: 'Relevé de compte N°{{number}}'
+        #>title: 'Relevé de compte N°%{number}'
       bank_statement_create:
         #>title: 'Pointer un nouveau relevé de compte'
       bank_statement_point:
         #>balance: 'Solde final'
         #>bank_statement_update: 'Modifier le relevé'
-        #>cumul: 'Cumul du total et du solde précédent N°{{number}}'
+        #>cumul: 'Cumul du total et du solde précédent N°%{number}'
         #>entries_to_point: 'Écritures à pointer'
-        #>previous_bank_statement: 'Solde du relevé précédent N°{{number}}'
-        #>title: 'Pointer le relevé N°{{number}} du {{cash}}'
+        #>previous_bank_statement: 'Solde du relevé précédent N°%{number}'
+        #>title: 'Pointer le relevé N°%{number} du %{cash}'
       bank_statement_update:
-        #>title: 'Modifier le relevé N°{{number}}'
+        #>title: 'Modifier le relevé N°%{number}'
       bank_statements:
         #>title: 'Relevés de compte bancaire'
       cash:
@@ -103,7 +103,7 @@ spa:
           #>bank_statements: 'Relevés de compte'
           #>embankments: 'Remises en banque'
         #>cash_update: 'Modifier la trésorerie'
-        #>title: '{{nature_label}} : {{name}}'
+        #>title: '%{nature_label} : %{name}'
       _cash_accountancy_form:
         #>accountancy: 'Comptabilité'
       cash_create:
@@ -112,7 +112,7 @@ spa:
         #>general: 'Description générale'
         #>iban: 'Numéro de compte bancaire internationale (IBAN)'
       cash_update:
-        #>title: 'Modifier la trésorerie : {{name}}'
+        #>title: 'Modifier la trésorerie : %{name}'
       cashes:
         #>title: 'Trésoreries'
       _currencies_find:
@@ -138,7 +138,7 @@ spa:
       entry_update:
       financialyear:
         #>general_informations: 'Informations générales'
-        #>title: 'Exercice comptable {{code}}'
+        #>title: 'Exercice comptable %{code}'
       financialyear_close:
         #>close: 'Clôturer l''exercice'
         #>create_journal: '-- Créer le journal --'
@@ -164,7 +164,7 @@ spa:
         #>journals: 'Journaux'
         nb_entries:
           #>one: '1 écriture'
-          #>other: '{{count}} écritures'
+          #>other: '%{count} écritures'
           #>zero: 'Aucune écriture'
         #>title: 'Comptabilité générale'
       journal:
@@ -173,12 +173,12 @@ spa:
         #>debit: 'Débit'
         #>journal_update: 'Modifier le journal'
         #>search: 'Rechercher des pièces/écritures'
-        #>title: 'Journal : {{name}} ({{code}})'
+        #>title: 'Journal : %{name} (%{code})'
         #>totals: 'Totaux (pièces validées et brouillard)'
       journal_close:
         #>close: 'Clôturer le journal'
         #>select_closure_date: 'Choisissez la date de clôture'
-        #>title: 'Clôture du {{name}}'
+        #>title: 'Clôture du %{name}'
       journal_create:
         #>title: 'Créer un nouveau journal'
       journal_entry_create:
@@ -186,29 +186,29 @@ spa:
       journal_record:
         #>entries: 'Écritures'
         #>journal_record_update: 'Modifier la pièce'
-        #>resource: 'Consulter la pièce d''origine : {{resource}} {{number}}'
-        #>title: 'Pièce comptable N°{{number}} du {{created_on}}'
+        #>resource: 'Consulter la pièce d''origine : %{resource} %{number}'
+        #>title: 'Pièce comptable N°%{number} du %{created_on}'
       journal_record_create:
         #>title: 'Ajouter une pièce'
       journal_record_update:
-        #>title: 'Modifier la pièce N°{{number}} du {{created_on}}'
+        #>title: 'Modifier la pièce N°%{number} du %{created_on}'
       journal_reopen:
         #>reopen: 'Déclôturer le journal'
         #>select_closure_date: 'Choisissez la date de clôture'
-        #>title: 'Déclôture du {{name}}'
+        #>title: 'Déclôture du %{name}'
       journal_update:
-        #>title: 'Modifier le journal : {{name}}'
+        #>title: 'Modifier le journal : %{name}'
       _journals:
         #>draft_entries: 'Brouillard'
-        #>journal_detail: 'Cloturé au {{closed_on}}'
-        #>journal_name: '{{name}}'
+        #>journal_detail: 'Cloturé au %{closed_on}'
+        #>journal_name: '%{name}'
       journals:
         #>title: 'Journaux'
       _journals_find:
       _journals_search:
         #>filter_entries_with: 'Filtrer les écritures avec'
         #>interval: 'Intervalle personnalisé'
-        #>manual_period: 'du {{start}} au {{finish}}'
+        #>manual_period: 'du %{start} au %{finish}'
         #>period: 'Période prédéfinie'
       lettering:
         #>lettering_account_client: 'Lettrage des comptes clients'
@@ -263,7 +263,7 @@ spa:
         #>result: 'Résultat'
         #>running_cost: 'Charges d''exploitation'
         #>running_finished: 'Produits d''exploitation'
-        #>title: 'Documents annuels pour {{value}}'
+        #>title: 'Documents annuels pour %{value}'
         #>total: 'Total'
       tax_create:
         #>title: 'Ajouter une nouvelle taxe'
@@ -300,7 +300,7 @@ spa:
         #>payback: 'Remboursement demandée'
         #>reported_balance: 'Crédit à reporter'
         #>simplified: 'Régime du réel simplifié'
-        #>title: '{{nature}} pour la période du {{started_on}} au {{stopped_on}}'
+        #>title: '%{nature} pour la période du %{started_on} au %{stopped_on}'
         #>vat: 'Taxe à payer'
         #>vat_acquisitions: 'Acquisitions intracommunautaires'
         #>vat_amount: 'Taxe due'
@@ -320,7 +320,7 @@ spa:
         #>tax_declaration_create: 'Ajouter une nouvelle déclaration'
         #>title: 'Déclaration de TVA'
       tax_update:
-        #>title: 'Modifier la taxe : {{name}}'
+        #>title: 'Modifier la taxe : %{name}'
       taxes:
         #>tax_create: 'Ajouter une nouvelle taxe'
         #>title: 'Taxes'
