--- a/config/locales/eng/notifications.yml
+++ b/config/locales/eng/notifications.yml
@@ -1,8 +1,8 @@
 eng:
   notifications:
-    access_denied: 'Access denied. {{reason}} ({{url}})'
+    access_denied: 'Access denied. %{reason} (%{url})'
     accountizing_is_finished: 'The commercial data transfer is finished.'
-    accountizing_works_only_with: 'The transfer to accountancy can be done only for: {{list}}.'
+    accountizing_works_only_with: 'The transfer to accountancy can be done only for: %{list}.'
     bad_file: 'The file is incorrect.'
     cannot_delete_entity: 'This person can''t be deleted because there is some accounting history.'
     cannot_merge_an_entity_with_itself: 'It''s impossible to merge a person with itself'
@@ -13,22 +13,22 @@ eng:
     columns_are_already_uses: 'One or many columns are selected many times'
     draft_entries_are_validated:
       one: 'One record has been validated'
-      other: '{{count}} records has been validated'
+      other: '%{count} records has been validated'
       zero: 'No records has been validated'
     entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its name.'
-    exception_raised: 'An error occurred during the processing: {{message}}'
+    exception_raised: 'An error occurred during the processing: %{message}'
     expired_session: 'Session expired. Please reconnect.'
-    fails_to_extract_listing: 'The listing can''t be made: {{message}}'
+    fails_to_extract_listing: 'The listing can''t be made: %{message}'
     import_succeeded: 'Your data have beeen successfully imported'
     importation_cancelled: 'Your data was not imported. Import has been canceled'
     importation_finished: 'The import is complete.'
     impossible_to_add_lines: 'You can add more products to your sale, the estimate is passed in order'
     impossible_to_add_lines_to_purchase: 'You can not add products to your purchase '
     invalid_file_nature: 'Invalid file type'
-    journal_closed_on: 'The journal "{{journal}}" was closed on {{closed_on}}.'
+    journal_closed_on: 'The journal "%{journal}" was closed on %{closed_on}.'
     journal_record_already_validated: 'The record has already been validated and can not be changed'
-    journal_record_has_been_saved: 'The record #{{number}} has been successfully saved'
-    journal_reopened_on: 'The journal "{{journal}}" has been re-opened on {{closed_on}}.'
+    journal_record_has_been_saved: 'The record #%{number} has been successfully saved'
+    journal_reopened_on: 'The journal "%{journal}" has been re-opened on %{closed_on}.'
     mails_are_sent: 'The emails were sent'
     need_balanced_journal_to_tax_declaration: 'All your journals must be closed and balanced at that date.'
     need_cash_to_record_statements: 'You must be at least create a bank account to enter a statement.'
@@ -44,7 +44,7 @@ eng:
     need_stocks_location_to_create_products: 'You must create a warehouse to be able to create a product'
     need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
     need_to_create_subscription_nature: 'You must create a type of subscription to manage your subscriptions'
-    new_actual_number: 'The new number is being {{actual_number}}'
+    new_actual_number: 'The new number is being %{actual_number}'
     no_authenticated: 'You could not be identified. The username or password must be incorrect.'
     no_balance_template: 'No template for the balance'
     no_closable_financialyear: 'No closable financial year.'
@@ -62,26 +62,26 @@ eng:
     no_unvalidated_operations: 'No task to do'
     password_successfully_changed: 'Your password has been updated successfully'
     prices_import_succeeded: 'Your data have been successfully imported '
-    print_failure: 'Print failure. Try to reload the templates to correct the problem. {{error}} ({{class}}).'
+    print_failure: 'Print failure. Try to reload the templates to correct the problem. %{error} (%{class}).'
     record_cannot_be_removed: 'The record can not be deleted'
     record_has_been_correctly_removed: 'The record has been removed successfully'
     record_has_not_been_removed: 'The record has not been removed'
-    restoration_finished: 'Restoring the backup has completed (in {{value}} seconds). Your company ID is {{code}}'
+    restoration_finished: 'Restoring the backup has completed (in %{value} seconds). Your company ID is %{code}'
     sale_order_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     sale_order_cannot_be_updated: 'The estimate is no longer editable.'
     sale_order_cant_be_deleted: 'The sale order can not be deleted.'
     select_entries_to_letter_together: 'Select entries in order to letter them together'
     specify_filter: 'You must choose at least one search filter'
     specify_updates: 'You must specify at least one field to edit'
-    unavailable_model: 'Inexistent {{model}} ({{id}})'
-    unknown_action: 'The requested page is unavailable ({{url}})'
+    unavailable_model: 'Inexistent %{model} (%{id})'
+    unknown_action: 'The requested page is unavailable (%{url})'
     unknown_company: 'Unknown company'
     unvalid_version_for_restore: 'The version of the software used to perform the backup does not match the current version of the software'
     update_is_done: 'The update has been made'
     validates_old_inventories: 'It is advisable to clear or validate uncommitted inventories before making a new'
     x_unpointed_journal_entries:
       one: 'There is one entry to point'
-      other: 'There are {{count}} entries to point'
+      other: 'There are %{count} entries to point'
       zero: 'There are no entries to point at the moment'
     you_must_have_an_email_column: 'You must have an email address in your extraction'
     you_must_select_a_file_to_import: 'You must select a file to import'
