--- a/config/locales/spa/pack.management.yml
+++ b/config/locales/spa/pack.management.yml
@@ -25,7 +25,7 @@ spa:
       #>last_payment_date: 'Date du dernier encaissement'
       locations:
       #>mobile: 'Portable'
-      #>no_contacts: 'Aucune adresse définie pour {{name}}'
+      #>no_contacts: 'Aucune adresse définie pour %{name}'
       #>number: 'Numéro vente'
       #>order: 'Commande'
       #>paid_on: 'Réglé le'
@@ -85,13 +85,13 @@ spa:
         #>source: 'Source de données'
       delay:
         #>delay_update: 'Modifier le délai'
-        #>title: 'Délai : {{name}}'
+        #>title: 'Délai : %{name}'
       delay_create:
         #>title: 'Ajout d''un nouveau délai'
       _delay_form:
         #>general: 'Général'
       delay_update:
-        #>title: 'Modification du délai : {{name}}'
+        #>title: 'Modification du délai : %{name}'
       delays:
         #>delay_create: 'Ajouter un nouveau délai'
         #>title: 'Délais'
@@ -111,7 +111,7 @@ spa:
       delivery_mode_create:
         #>title: 'Ajout d''un nouveau mode de livraison'
       delivery_mode_update:
-        #>title: 'Modification du mode de livraison : {{name}}'
+        #>title: 'Modification du mode de livraison : %{name}'
       delivery_modes:
         #>title: 'Modes de livraison'
       _delivery_update:
@@ -122,23 +122,23 @@ spa:
         #>embankment: 'Remise en banque du'
         #>embankment_update: 'Modifier la remise en banque'
         #>on_account: 'À remettre sur le compte'
-        #>payments_count: 'Nombre de {{mode}}'
+        #>payments_count: 'Nombre de %{mode}'
         #>print_on: 'Le'
-        #>title: 'Remise en banque {{number}} du {{created_on}}'
+        #>title: 'Remise en banque %{number} du %{created_on}'
       embankment_create:
-        #>title: 'Créer une remise : {{mode}}'
+        #>title: 'Créer une remise : %{mode}'
       _embankment_form:
         #>infos: 'Renseignez les informations suivantes'
         #>payments: 'Encaissements'
       embankment_payment_create:
       embankment_payment_update:
       embankment_update:
-        #>title: 'Modification de la remise en banque du {{created_on}}'
+        #>title: 'Modification de la remise en banque du %{created_on}'
       embankments:
         embankment_create:
-          #>one: 'Effectuer une remise : {{mode}} (1 encaissement)'
-          #>other: 'Effectuer une remise : {{mode}} ({{count}} encaissements)'
-          #>zero: 'Effectuer une remise : {{mode}} (Pas d''encaissement)'
+          #>one: 'Effectuer une remise : %{mode} (1 encaissement)'
+          #>other: 'Effectuer une remise : %{mode} (%{count} encaissements)'
+          #>zero: 'Effectuer une remise : %{mode} (Pas d''encaissement)'
         nb_checks:
         #>title: 'Remises en banque'
       _graph_statistics:
@@ -148,23 +148,23 @@ spa:
         #>low_stocks: 'Stocks sous le seuil critique'
         nb_enbankments:
           #>one: '1 remise en banque à valider'
-          #>other: '{{count}} remises en banque à valider'
+          #>other: '%{count} remises en banque à valider'
           #>zero: 'Aucune remise en banque à valider'
         nb_payments:
           #>one: '1 encaissement à encaisser depuis au moins 15 j.'
-          #>other: '{{count}} encaissement à encaisser depuis au moins 15 j.'
+          #>other: '%{count} encaissement à encaisser depuis au moins 15 j.'
           #>zero: 'Aucun encaissement à encaisser depuis au moins 15 j.'
         nb_purchases:
           #>one: '1 achat en attente de reception'
-          #>other: '{{count}} achats en attente de reception'
+          #>other: '%{count} achats en attente de reception'
           #>zero: 'Aucun achat en attente de reception'
         nb_sales:
           #>one: '1 livraison en attente'
-          #>other: '{{count}} livraisons en attente '
+          #>other: '%{count} livraisons en attente '
           #>zero: 'Aucune livraison en attente'
         nb_transfers:
           #>one: '1 transfert à effectuer'
-          #>other: '{{count}} transferts à effectuer'
+          #>other: '%{count} transferts à effectuer'
           #>zero: 'Aucun transfert à effectuer'
         #>title: 'Gestion commerciale'
       inventories:
@@ -190,21 +190,21 @@ spa:
         #>invoice_cancel: 'Faire un avoir sur la facture'
         #>invoice_lines: 'Lignes de la facture'
         #>invoice_print: 'Imprimer la facture'
-        #>title: '{{nature}} {{number}}'
+        #>title: '%{nature} %{number}'
       invoice_cancel:
         #>already_credited_quantity: 'Qté. déjà passée en avoir'
         #>price_amount: 'Prix HT'
         #>price_amount_with_taxes: 'Prix TTC'
         #>product: 'Produit'
         #>quantity_to_credit: 'Qté. à passer en avoir'
-        #>title: 'Passage en avoir de la facture {{number}}'
+        #>title: 'Passage en avoir de la facture %{number}'
         #>total_quantity: 'Qté. totale'
         #>unit: 'Unité'
         #>validate: 'Valider'
       invoices:
         nb_invoices:
           #>one: '1 facture enregistrée'
-          #>other: '{{count}} factures enregistrées'
+          #>other: '%{count} factures enregistrées'
           #>zero: 'Aucune facture enregistrée'
         #>title: 'Factures'
       _invoices_search:
@@ -221,7 +221,7 @@ spa:
         #>locations: 'Voir la liste des lieux de stockage'
         #>moves: 'Mouvements de stocks'
         #>stock_move_create: 'Ajouter un mouvement de stock'
-        #>title: 'Détail du lieu de stockage : {{name}}'
+        #>title: 'Détail du lieu de stockage : %{name}'
       _location_choice:
         #>select_location: 'Choississez un lieu de stockage'
       location_create:
@@ -285,11 +285,11 @@ spa:
         #>sale_price_create: 'Créer un prix de vente'
         #>sales_price_create: 'Ajouter un prix de vente'
         #>stocks: 'État des stocks'
-        #>title: 'Produit : {{name}}'
+        #>title: 'Produit : %{name}'
       product_component_create:
-        #>title: 'Ajouter un composant au produit {{product}} '
+        #>title: 'Ajouter un composant au produit %{product} '
       product_component_update:
-        #>title: 'Modification d''un composant du produit {{product}} '
+        #>title: 'Modification d''un composant du produit %{product} '
       _product_components:
         #>product_component_create: 'Ajouter un nouveau composant'
       product_create:
@@ -304,11 +304,11 @@ spa:
         #>purchase_price_create: 'Créer un prix d''achat'
         #>sale_price_create: 'Créer un prix de vente'
       product_update:
-        #>title: 'Modification du produit : {{name}}'
+        #>title: 'Modification du produit : %{name}'
       products:
         nb_products:
           #>one: '1 produit enregistré'
-          #>other: '{{count}} produits enregistrés'
+          #>other: '%{count} produits enregistrés'
           #>zero: 'Aucun produit enregistré'
         #>product_create: 'Ajout d''un nouveau produit'
         #>title: 'Produits'
@@ -325,13 +325,13 @@ spa:
         #>purchase_order_print: 'Imprimer la commande fournisseur'
         #>purchase_payment_part_create: 'Payer l''achat'
         #>sale_payment_part_create: 'Ajouter un décaissement à l''achat'
-        #>title: 'Détails de l''achat {{number}} au fournisseur {{supplier}} '
+        #>title: 'Détails de l''achat %{number} au fournisseur %{supplier} '
       purchase_order_create:
         #>title: 'Nouvel achat'
       _purchase_order_form:
         #>infos: 'Renseignez les caractéristiques de l''achat '
       purchase_order_line_create:
-        #>title: 'Ajouter un produit à la commande : {{number}}'
+        #>title: 'Ajouter un produit à la commande : %{number}'
       purchase_order_line_update:
         #>title: 'Modifier une ligne de la commande'
       purchase_order_lines:
@@ -344,7 +344,7 @@ spa:
         #>purchase_order_print: 'Imprimer la commande d''achat'
         #>purchase_order_update: 'Modifier les informations de la commande'
         #>purchase_orders: 'Consulter la liste des achats'
-        #>title: 'Produits de l''achat {{number}} au fournisseur {{supplier}}'
+        #>title: 'Produits de l''achat %{number} au fournisseur %{supplier}'
         #>validate: 'Valider la commande'
       purchase_order_summary:
         #>financial_state: 'État financier'
@@ -353,11 +353,11 @@ spa:
         #>products: 'Produits de la commande'
         #>purchase_payment_part_create: 'Payer l''achat'
         #>sale_payment_part_create: 'Ajouter un décaissement'
-        #>title: 'Décaissements de l''achat N°{{number}}'
+        #>title: 'Décaissements de l''achat N°%{number}'
         #>total_amount: 'Montant de l''achat'
         #>unpaid_amount: 'Montant restant à payer'
       purchase_order_update:
-        #>title: 'Modifier l''achat : {{number}}'
+        #>title: 'Modifier l''achat : %{number}'
       purchase_orders:
         nb_purchases:
         #>search: 'Rechercher un achat'
@@ -365,7 +365,7 @@ spa:
       purchase_payment:
         #>purchase_orders: 'Achats payés avec ce décaissement'
         #>purchase_payment_update: 'Modifier le décaissement'
-        #>title: 'Décaissement n°{{number}} pour {{payee}}'
+        #>title: 'Décaissement n°%{number} pour %{payee}'
       purchase_payment_create:
         #>title: 'Ajout d''un décaissement'
       _purchase_payment_form:
@@ -381,9 +381,9 @@ spa:
       purchase_payment_modes:
         #>title: 'Modes de décaissement'
       purchase_payment_part_create:
-        #>title: 'Payer l''achat N°{{number}}'
+        #>title: 'Payer l''achat N°%{number}'
       purchase_payment_update:
-        #>title: 'Modification du décaissement : {{number}}'
+        #>title: 'Modification du décaissement : %{number}'
       purchase_payments:
         #>all: 'Tous'
         #>search: 'Rechercher des décaissements'
@@ -401,7 +401,7 @@ spa:
         #>sale_order_print: 'Imprimer la vente'
         #>sale_payment_part_create: 'Ajouter un encaissement'
         #>subscriptions: 'Abonnements'
-        #>title: 'Détails de la vente {{number}} au client {{client}}'
+        #>title: 'Détails de la vente %{number} au client %{client}'
       sale_order_create:
         #>title: 'Nouvelle vente'
       sale_order_deliveries:
@@ -465,7 +465,7 @@ spa:
         #>unit: 'Unité'
         #>valid: 'Valider'
       _sale_order_line_stocks:
-        #>line_stock: 'Lieu de stockage: {{location}}, quantité disponible: {{virtual_q}}'
+        #>line_stock: 'Lieu de stockage: %{location}, quantité disponible: %{virtual_q}'
       _sale_order_line_tracking:
         #>no_tracking: 'Aucun lot'
         #>tracking: 'Lot '
@@ -488,7 +488,7 @@ spa:
         #>sale_order_print: 'Imprimer le devis'
         #>sale_order_update: 'Modifier les informations du devis'
         #>subscriptions: 'Abonnements'
-        #>title: 'Sélection des produits pour le devis {{sale_order}} de : {{client}}'
+        #>title: 'Sélection des produits pour le devis %{sale_order} de : %{client}'
         #>total: 'Total'
       sale_order_nature_create:
         #>title: 'Ajout d''un type de vente'
@@ -498,7 +498,7 @@ spa:
         #>downpayment: 'Options pour l''acompte'
         #>general: 'Général'
       sale_order_nature_update:
-        #>title: 'Modification du type de vente : {{name}}'
+        #>title: 'Modification du type de vente : %{name}'
       sale_order_natures:
         #>sale_order_nature_create: 'Créer un nouveau type de vente'
         #>title: 'Types de ventes'
@@ -521,18 +521,18 @@ spa:
         #>payments_total: 'Total encaissements'
         #>rest_to_pay: 'Reste à payer'
         #>sale_payment_part_create: 'Ajouter un nouvel encaissement'
-        #>title: 'Facture et encaissement(s) de la vente {{number}}'
+        #>title: 'Facture et encaissement(s) de la vente %{number}'
         #>total_amount: 'Montant de la commande'
         #>uninvoiced_amount: 'Montant non facturé'
         #>unpaid_amount: 'Montant restant à payer'
       sale_order_update:
-        #>title: 'Modification de la vente N°{{number}}'
+        #>title: 'Modification de la vente N°%{number}'
       sale_orders:
         #>all: 'Toutes'
         #>current: 'En cours'
         nb_sales:
           #>one: '1 vente'
-          #>other: '{{count}} ventes'
+          #>other: '%{count} ventes'
           #>zero: 'Aucune vente'
         #>search_sales: 'Rechercher des ventes'
         #>title: 'Devis et commandes'
@@ -541,7 +541,7 @@ spa:
       sale_payment:
         #>sale_orders: 'Ventes réglées avec cet encaissement'
         #>sale_payment_update: 'Modifier l''encaissement'
-        #>title: 'Encaissement n°{{number}} de {{entity}}'
+        #>title: 'Encaissement n°%{number} de %{entity}'
       sale_payment_create:
         #>title: 'Ajout d''un nouvel encaissement'
       _sale_payment_form:
@@ -555,21 +555,21 @@ spa:
         #>embankment: 'Remise en banque'
         #>general: 'Description générale'
       sale_payment_mode_update:
-        #>title: 'Modifier le mode d''encaissement : {{name}}'
+        #>title: 'Modifier le mode d''encaissement : %{name}'
       sale_payment_modes:
         #>title: 'Modes d''encaissement'
       sale_payment_part_create:
-        #>title: 'Ajouter un nouvel encaissement : {{type}} N°{{number}}'
+        #>title: 'Ajouter un nouvel encaissement : %{type} N°%{number}'
       _sale_payment_part_form:
         #>downpayment: 'Acompte'
         #>existing_part: 'Utiliser un encaissement non affecté'
         #>new: 'Créer un nouvel encaissement'
         #>new_payment: 'Enregistrer un nouvel encaissement'
-        #>payment_label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{entity}}'
+        #>payment_label: '%{number}. %{amount} (%{usable_amount} restants) du %{date} par %{mode} de %{entity}'
         #>select_existing_payment: 'Sélectionner un encaissement existant'
         #>unused_payment: 'Encaissement à utiliser'
       sale_payment_update:
-        #>title: 'Modification de l''encaissement n°{{number}}'
+        #>title: 'Modification de l''encaissement n°%{number}'
       sale_payments:
         #>all: 'Tous'
         nb_payments:
@@ -584,14 +584,14 @@ spa:
       shelf:
         #>products: 'Produits de la catégorie'
         #>shelf_update: 'Modifier la catégorie'
-        #>title: 'Détail de la catégorie : {{name}}'
+        #>title: 'Détail de la catégorie : %{name}'
       shelf_create:
         #>title: 'Ajout d''une nouvelle catégorie de produits'
       _shelf_form:
         #>catalog: 'Description pour catalogue'
         #>general: 'Informations générales'
       shelf_update:
-        #>title: 'Modification de la catégorie de produits : {{name}}'
+        #>title: 'Modification de la catégorie de produits : %{name}'
       shelves:
         #>shelf_create: 'Ajouter une nouvelle catégorie de produits'
         #>title: 'Catégories de produits'
@@ -625,9 +625,9 @@ spa:
       _stock_move_form:
         #>description: 'Description'
         #>nature: 'Opération'
-        #>product: '{{product}} ({{unit}})'
+        #>product: '%{product} (%{unit})'
       stock_move_update:
-        #>title: 'Modifier le mouvement de stock : {{name}}'
+        #>title: 'Modifier le mouvement de stock : %{name}'
       stock_transfer_create:
         #>title: 'Ajouter un transfert ou une perte de stocks'
       stock_transfer_update:
@@ -659,13 +659,13 @@ spa:
       subscription_nature_create:
         #>title: 'Ajouter un type d''abonnement'
       subscription_nature_update:
-        #>title: 'Modification du type d''abonnement : {{name}}'
+        #>title: 'Modification du type d''abonnement : %{name}'
       subscription_natures:
         #>subscription_nature_create: 'Ajouter un type d''abonnement'
         #>title: 'Types d''abonnements'
       _subscription_options:
       subscription_update:
-        #>title: 'Modification de l''abonnement : N°{{number}} du {{start}} au {{finish}}'
+        #>title: 'Modification de l''abonnement : N°%{number} du %{start} au %{finish}'
       subscriptions:
         #>select_number_or_date: 'Entrez un numéro ou une date'
         #>subscription_nature: 'Type d''abonnement'
@@ -682,10 +682,10 @@ spa:
         #>purchases: 'Achats'
         #>sales: 'Ventes'
         #>stocks: 'État actuel des stocks'
-        #>title: 'Lot {{name}}'
+        #>title: 'Lot %{name}'
       transport:
         #>deliveries: 'Livraisons'
-        #>title: 'Transport du {{created_on}}'
+        #>title: 'Transport du %{created_on}'
       transport_create:
         #>title: 'Ajout d''un nouveau transport'
       transport_deliveries:
